css/document.css
body
{
    margin:           0;
    background-color: #f4f4f4;
    user-select:      none;
    font-family:      Inter;
}


div
{
    margin:  0;
    padding: 0;
}


#graphView
{
    display:  block;
    overflow: hidden;
    height:   calc(100% - 40px);
    position: relative;
}


input[type=text]
{
    font-size:     11;
    font-family:   Inter;
    height:        28px;
    padding-top:   1;
    border:        none;
    box-shadow:    0px 1px 0px 0px rgba(0, 0, 0, 0.1);
    border-radius: 0.5px;
    cursor:        default;
}


input[type=text]:hover
{
    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
}


input[type=text]:focus
{
    box-shadow: 0 0 0 1px var(--activeObjectColor);
    outline: none;
}


input[type=text]::selection
{
    background-color: #b9e2fe;
}

